--- a/src/main/resources/serverUrl.properties
+++ b/src/main/resources/serverUrl.properties
@@ -1,6 +1,6 @@
 YB.WEBSOCKET=ws://122.10.117.203:1606
-BIT.WEBSOCKET=wss://real.okex.com:10440/websocket/okexapi 
-//BIT.WEBSOCKET=wss://real.okex.com:10440/ws/v1
+//BIT.WEBSOCKET=wss://real.okex.com:10440/websocket/okexapi 
+BIT.WEBSOCKET=wss://real.okex.com:10440/ws/v1
 
 
 
