--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,10 +1,10 @@
 jdbc.driver=com.mysql.jdbc.Driver
 #数据库地址
-jdbc.url=jdbc:mysql://localhost:3306/bituniverse?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://localhost:3306/sl_db?useUnicode=true&characterEncoding=utf8
 #用户名
 jdbc.username=root
 #密码
-jdbc.password=root
+jdbc.password=ASas940916.
 db.initialSize=0
 db.maxActive=20
 db.minIdle=1
