--- a/src/main/resources/serverUrl.properties
+++ b/src/main/resources/serverUrl.properties
@@ -1,5 +1,5 @@
 OKCOIN.WEBSOCKET=wss://real.okex.com:8443/ws/v3
-SERVER.WEBSOCKET=wss://127.0.0.1:1606
+SERVER.WEBSOCKET=ws://47.56.87.149:1606
 
 
 
